Optimize API for Vercel and RapidAPI
